# eval-tools

./: .gitignore  EXPERIMENT_EVALUATION_SPEC.md  README.md  README.zh-CN.md  pyproject.toml
configs/examples/: prepare_custom_protocol.toml  prepare_experiment_d.toml  prepare_main.toml  run_eval_adapter.toml  run_eval_custom_protocol.toml  run_eval_expd_fps_32s_1fps.toml  run_eval_expd_fps_32s_2fps.toml  run_eval_expd_fps_32s_4fps.toml  run_eval_expd_window_16s_2fps.toml  run_eval_expd_window_32s_2fps.toml  run_eval_expd_window_64s_2fps.toml  run_eval_main.toml  run_eval_predictions.toml  workflow.toml
docs/: ADAPTER_AGENT_GUIDE.md
prompts/: judge_v1.md
prompts/benchmark_oracle_v1/: Continuous_Actions_Caption.md  Spatial_Temporal_Grounding.md
prompts/benchmark_v1/: AI_Coach.md  Commentary.md  Continuous_Actions_Caption.md  Continuous_Events_Caption.md  Objects_Spatial_Relationships.md  Score_Prediction.md  Scoreboard_Multiple.md  Scoreboard_Single.md  Spatial_Imagination.md  Spatial_Temporal_Grounding.md  Temporal_Causal.md
prompts/judge_v1/: AI_Coach.md  Continuous_Actions_Caption.md  Continuous_Events_Caption.md  Objects_Spatial_Relationships.md  Score_Prediction.md  Scoreboard_Multiple.md  Scoreboard_Single.md  Spatial_Imagination.md  Temporal_Causal.md
prompts/structurer_oracle_v1/: Continuous_Actions_Caption.md  (+1 more)
tests/: test_bertscore.py  test_config_cli.py  test_judge.py  test_object_spatial.py  test_prompting.py  test_protocols.py  test_run_eval_resume.py  test_scoreboard_single.py  test_structurer.py  test_temporal_tasks.py  test_workflow.py
(+42 files in other folders)
