[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "omnichain-eval"
version = "0.1.0"
description = "Evaluation and prepared-data tooling for OmniChainBench."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "OpenAI Codex" }
]
dependencies = [
  "bert-score>=0.3.13",
  "opencv-python-headless>=4.10.0,<5.0.0",
  "openai>=1.40.0,<2.0.0",
  "Pillow>=10.0.0,<12.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0,<9.0.0",
]

[project.scripts]
omnichain-eval = "omnichain_eval.cli:main"

[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple/"
default = true

[dependency-groups]
dev = [
    "ruff>=0.15.7",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
